--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   file_picker: ^10.1.2
   shared_preferences: ^2.5.3
   archive: ^4.0.7
+  js_interop: ^0.0.1
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
