--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   js_interop: ^0.0.1
   web: ^1.1.1
   crypto: ^3.0.6
+  provider: ^6.1.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
