--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   crypto: ^3.0.6
   provider: ^6.1.5
   url_launcher: ^6.3.1
+  yaml: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   assets:
     - assets/dark_splash.png
     - assets/light_splash.png
+    - assets/smali_grammar.yaml
 
   # To add assets to your application, add an assets section, like this:
   # assets:
