--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/dark_splash.png
     - assets/light_splash.png
     - assets/smali_grammar.yaml
+    - assets/licenses/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
