--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,11 @@ flutter:
     - assets/smali_grammar.yaml
     - assets/licenses/
 
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
