--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.3.1
   yaml: ^3.1.2
   permission_handler: ^12.0.0+1
+  native_stack_traces: ^0.6.0
 
 dev_dependencies:
   flutter_test:
