--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.7+6
+version: 1.0.8+8
 
 environment:
   sdk: ^3.7.2
@@ -46,6 +46,7 @@ dependencies:
   yaml: ^3.1.2
   permission_handler: ^12.0.0+1
   native_stack_traces: ^0.6.0
+  quick_actions: ^1.1.0
 
 dev_dependencies:
   flutter_test:
